--- a/packages/client/tsconfig.esm.json
+++ b/packages/client/tsconfig.esm.json
@@ -5,10 +5,25 @@
   },
   "references": [
     {
+      "path": "../common/tsconfig.esm.json"
+    },
+    {
+      "path": "../http-client/tsconfig.esm.json"
+    },
+    {
+      "path": "../http-types/tsconfig.esm.json"
+    },
+    {
+      "path": "../jsonrpc/tsconfig.esm.json"
+    },
+    {
       "path": "../redux/tsconfig.esm.json"
     },
     {
-      "path": "../common/tsconfig.esm.json"
+      "path": "../jsonrpc/tsconfig.esm.json"
+    },
+    {
+      "path": "../test-utils/tsconfig.esm.json"
     }
   ]
 }
