--- a/packages/db-typeorm/tsconfig.json
+++ b/packages/db-typeorm/tsconfig.json
@@ -5,7 +5,11 @@
     "rootDir": "src"
   },
   "references": [
-    {"path": "../db"},
-    {"path": "../logger"}
+    {
+      "path": "../db"
+    },
+    {
+      "path": "../logger"
+    }
   ]
 }
