--- a/packages/common/tsconfig.esm.json
+++ b/packages/common/tsconfig.esm.json
@@ -3,5 +3,9 @@
   "compilerOptions": {
     "outDir": "esm"
   },
-  "references": []
+  "references": [
+    {
+      "path": "../jsonrpc/tsconfig.esm.json"
+    }
+  ]
 }
