--- a/packages/jsonrpc/package.json
+++ b/packages/jsonrpc/package.json
@@ -9,12 +9,12 @@
     "clean": "rm -rf lib/"
   },
   "dependencies": {
-    "reflect-metadata": "^0.1.13",
-    "@rondo.dev/redux": "0.0.1",
     "@rondo.dev/logger": "0.0.1",
+    "@rondo.dev/redux": "0.0.1",
+    "axios": "^0.19.0",
     "express": "^4.17.1",
-    "supertest": "^4.0.2",
-    "axios": "^0.19.0"
+    "reflect-metadata": "^0.1.13",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "body-parser": "^1.19.0",
