--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,21 +15,29 @@
     "typeorm": "ts-node ./node_modules/.bin/typeorm"
   },
   "dependencies": {
-    "@rondo.dev/logger": "0.0.1",
+    "@rondo.dev/argparse": "0.0.1",
+    "@rondo.dev/client": "0.0.1",
+    "@rondo.dev/common": "0.0.1",
+    "@rondo.dev/config": "0.0.1",
+    "@rondo.dev/db": "0.0.1",
     "@rondo.dev/db-typeorm": "0.0.1",
-    "typeorm": "^0.2.19",
+    "@rondo.dev/http-client": "0.0.1",
+    "@rondo.dev/http-types": "0.0.1",
+    "@rondo.dev/jsonrpc": "0.0.1",
+    "@rondo.dev/logger": "0.0.1",
+    "@rondo.dev/tasq": "0.0.1",
+    "@rondo.dev/validator": "0.0.1",
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
+    "cls-hooked": "^4.2.2",
+    "cookie-parser": "^1.4.4",
+    "csurf": "^1.10.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "http-errors": "^1.7.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "@rondo.dev/common": "0.0.1",
-    "csurf": "^1.10.0",
-    "@rondo.dev/validator": "0.0.1",
-    "shortid": "^2.2.15",
-    "@rondo.dev/tasq": "0.0.1",
-    "express-session": "^1.16.2",
-    "cls-hooked": "^4.2.2",
-    "http-errors": "^1.7.3",
-    "@rondo.dev/client": "0.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.1",
@@ -37,18 +45,10 @@
     "react-router-dom": "^5.0.1",
     "react-ssr-prepass": "^1.0.5",
     "redux": "^4.0.1",
+    "shortid": "^2.2.15",
     "styled-components": "^4.4.0",
-    "@rondo.dev/jsonrpc": "0.0.1",
-    "@rondo.dev/http-types": "0.0.1",
-    "@rondo.dev/db": "0.0.1",
-    "bcrypt": "^3.0.6",
-    "email-validator": "^2.0.4",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.4",
-    "@rondo.dev/config": "0.0.1",
-    "@rondo.dev/argparse": "0.0.1",
-    "@rondo.dev/http-client": "0.0.1",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "typeorm": "^0.2.19"
   },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
