--- a/package.json
+++ b/package.json
@@ -25,104 +25,105 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/body-parser": "^1.17.0",
-    "@types/cls-hooked": "^4.2.1",
-    "@types/cookie-parser": "^1.4.1",
-    "@types/csurf": "^1.9.35",
+    "@types/body-parser": "^1.17.1",
+    "@types/cls-hooked": "^4.3.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/csurf": "^1.9.36",
     "@types/es6-shim": "^0.31.39",
     "@types/express": "^4.17.1",
-    "@types/express-session": "^1.15.11",
-    "@types/history": "^4.7.2",
-    "@types/http-errors": "^1.6.1",
-    "@types/jest": "^24.0.18",
-    "@types/js-yaml": "^3.12.0",
+    "@types/express-session": "^1.15.15",
+    "@types/history": "^4.7.3",
+    "@types/http-errors": "^1.6.2",
+    "@types/jest": "^24.0.21",
+    "@types/js-yaml": "^3.12.1",
     "@types/marked": "^0.6.5",
     "@types/nock": "^11.1.0",
     "@types/node": "^12.12.3",
-    "@types/passport": "^1.0.0",
+    "@types/passport": "^1.0.1",
     "@types/passport-local": "^1.0.33",
-    "@types/react": "^16.8.13",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-redux": "^7.1.2",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/rimraf": "^2.0.2",
-    "@types/sanitize-html": "^1.18.3",
-    "@types/shortid": "0.0.29",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-router-dom": "^5.1.1",
+    "@types/rimraf": "^2.0.3",
+    "@types/sanitize-html": "^1.20.2",
+    "@types/shortid": "^0.0.29",
     "@types/std-mocks": "^1.0.0",
-    "@types/styled-components": "^4.1.19",
-    "@types/supertest": "^2.0.7",
-    "@types/uuid": "^3.4.4",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
+    "@types/styled-components": "^4.1.20",
+    "@types/supertest": "^2.0.8",
+    "@types/uuid": "^3.4.6",
+    "@typescript-eslint/eslint-plugin": "^2.6.0",
+    "@typescript-eslint/parser": "^2.6.0",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "bloomer": "^0.6.5",
     "body-parser": "^1.19.0",
     "browser-unpack": "^1.4.2",
-    "browserify": "^16.2.3",
+    "browserify": "^16.5.0",
     "browserify-hmr": "^0.4.0",
     "buildfile": "^1.2.22",
-    "bulma": "^0.7.4",
+    "bulma": "^0.8.0",
     "cls-hooked": "^4.2.2",
-    "common-shakeify": "^0.6.0",
+    "common-shakeify": "^0.6.2",
     "cookie-parser": "^1.4.4",
     "csurf": "^1.10.0",
     "deep-object-diff": "^1.1.0",
     "email-validator": "^2.0.4",
-    "eslint": "^6.4.0",
+    "eslint": "^6.6.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-react": "^7.14.3",
-    "esmify": "git+https://github.com/jeremija/esmify.git",
+    "eslint-plugin-react": "^7.16.0",
+    "esmify": "^2.1.1",
     "express": "^4.17.1",
-    "express-session": "^1.16.2",
-    "formik": "^1.5.8",
-    "history": "^4.9.0",
+    "express-session": "^1.17.0",
+    "formik": "^2.0.3",
+    "history": "^4.10.1",
     "http-errors": "^1.7.3",
-    "jest": "^24.5.0",
+    "jest": "^24.9.0",
     "js-yaml": "^3.13.1",
-    "lerna": "^3.16.4",
+    "lerna": "^3.18.3",
     "loose-envify": "^1.4.0",
     "marked": "^0.7.0",
-    "mysql": "^2.16.0",
+    "mysql": "^2.17.1",
     "nock": "^11.7.0",
     "node-sass": "^4.13.0",
-    "nodemon": "^1.18.9",
+    "nodemon": "^1.19.4",
     "npm-run-all": "^4.1.5",
     "open-graph-scraper": "^3.6.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pkg": "^4.4.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-icons": "^3.5.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-icons": "^3.8.0",
     "react-redux": "^7.1.1",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "react-ssr-prepass": "^1.0.5",
-    "redux": "^4.0.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-ssr-prepass": "^1.0.7",
+    "redux": "^4.0.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "sanitize-html": "^1.20.0",
+    "sanitize-html": "^1.20.1",
+    "semver": "^6.3.0",
     "shortid": "^2.2.15",
-    "sourceify": "git+https://github.com/jeremija/sourceify.git#sources-content",
+    "sourceify": "^1.0.0",
     "sqlite3": "^4.1.0",
     "std-mocks": "^1.0.1",
-    "styled-components": "^4.4.0",
+    "styled-components": "^4.4.1",
     "supertest": "^4.0.2",
     "svg-captcha": "^1.4.0",
-    "timeago.js": "^4.0.0-beta.2",
-    "ts-jest": "^24.0.0",
-    "ts-node": "^8.3.0",
-    "ts-node-dev": "^1.0.0-pre.40",
+    "timeago.js": "^4.0.1",
+    "ts-jest": "^24.1.0",
+    "ts-node": "^8.4.1",
+    "ts-node-dev": "^1.0.0-pre.43",
     "ts-transformer-keys": "^0.3.5",
     "tsify": "^4.0.1",
     "ttypescript": "^1.5.7",
-    "typeorm": "^0.2.19",
-    "typescript": "^3.6.3",
+    "typeorm": "^0.2.20",
+    "typescript": "^3.6.4",
     "typescript-plugin-styled-components": "^1.4.3",
     "typescript-tslint-plugin": "^0.5.4",
-    "uglify-js": "^3.5.3",
-    "uglifyify": "^5.0.1",
+    "uglify-js": "^3.6.5",
+    "uglifyify": "^5.0.2",
     "watchify": "^3.11.1"
   },
   "name": "node"
