--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,15 +19,15 @@
     "@rondo.dev/jsonrpc": "0.0.1",
     "@rondo.dev/redux": "0.0.1",
     "bloomer": "^0.6.5",
-    "history": "^4.9.0",
-    "react-icons": "^3.5.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "timeago.js": "^4.0.0-beta.2"
+    "history": "^4.10.1",
+    "react-icons": "^3.8.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "timeago.js": "^4.0.1"
   },
   "devDependencies": {
     "@rondo.dev/jsonrpc": "0.0.1",
     "@rondo.dev/test-utils": "0.0.1",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.11.0"
   }
 }
