--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -48,6 +48,9 @@ rules:
   '@typescript-eslint/no-explicit-any':
     - warn
     - ignoreRestArgs: true
+  '@typescript-eslint/triple-slash-reference':
+    - warn
+    - path: always
 overrides:
   - files:
       - '*.test.ts'
