--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@rondo.dev/db": "file:packages/db",
     "@rondo.dev/db-typeorm": "file:packages/db-typeorm",
     "@rondo.dev/middleware": "file:packages/middleware",
-    "@rondo.dev/captcha": "file:packages/captcha"
+    "@rondo.dev/captcha": "file:packages/captcha",
+    "@rondo.dev/react-captcha": "file:packages/react-captcha"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
