--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@rondo.dev/react-test": "file:packages/react-test"
   },
   "devDependencies": {
+    "@hot-loader/react-dom": "^16.10.2",
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.1",
     "@types/cls-hooked": "^4.3.0",
@@ -56,6 +57,7 @@
     "@types/uuid": "^3.4.6",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
+    "aliasify": "^2.1.0",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "bloomer": "^0.6.5",
@@ -96,6 +98,7 @@
     "pkg": "^4.4.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-hot-loader": "^4.12.15",
     "react-icons": "^3.8.0",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
