--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pkg": "^4.4.0",
+    "polished": "^3.4.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-hot-loader": "^4.12.15",
