Fix broken build after removing comments-* from history

--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "jest",
     "lint": "tslint --project .",
-    "compile": "tsc",
+    "compile": "tsc --build .",
+    "preinstall": "tsc --build .",
     "clean": "rm -rf lib/"
   },
   "bin": {
