--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -3,9 +3,6 @@
   "references": [
     {"path": "client"},
     {"path": "common"},
-    {"path": "server"},
-    {"path": "comments-client"},
-    {"path": "comments-common"},
-    {"path": "comments-server"}
+    {"path": "server"}
   ]
 }
