--- a/packages/react-captcha/tsconfig.json
+++ b/packages/react-captcha/tsconfig.json
@@ -4,5 +4,9 @@
     "outDir": "lib",
     "rootDir": "src"
   },
-  "references": []
+  "references": [
+    {
+      "path": "../react-test"
+    }
+  ]
 }
