Use relative paths in packages/*/package.json
When using versions and letting npm install dedupe the packages, npm
audit does not work and it exits with a cryptic error:

  The server said: Invalid package tree, run npm install to rebuild your package-lock.json

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -18,6 +18,9 @@
       "path": "../jsonrpc"
     },
     {
+      "path": "../react-captcha"
+    },
+    {
       "path": "../react-test"
     },
     {
