--- a/packages/redux/package.json
+++ b/packages/redux/package.json
@@ -17,7 +17,7 @@
   "module": "esm/index.js",
   "types": "lib/index.d.ts",
   "devDependencies": {
-    "@rondo.dev/test-utils": "0.0.1",
+    "@rondo.dev/test-utils": "file:../test-utils",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
   }
