--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,18 +15,19 @@
     "typeorm": "ts-node ./node_modules/.bin/typeorm"
   },
   "dependencies": {
-    "@rondo.dev/argparse": "0.0.1",
-    "@rondo.dev/client": "0.0.1",
-    "@rondo.dev/common": "0.0.1",
-    "@rondo.dev/config": "0.0.1",
-    "@rondo.dev/db": "0.0.1",
-    "@rondo.dev/db-typeorm": "0.0.1",
-    "@rondo.dev/http-client": "0.0.1",
-    "@rondo.dev/http-types": "0.0.1",
-    "@rondo.dev/jsonrpc": "0.0.1",
-    "@rondo.dev/logger": "0.0.1",
-    "@rondo.dev/tasq": "0.0.1",
-    "@rondo.dev/validator": "0.0.1",
+    "@rondo.dev/argparse": "file:../argparse",
+    "@rondo.dev/captcha": "file:../captcha",
+    "@rondo.dev/client": "file:../client",
+    "@rondo.dev/common": "file:../common",
+    "@rondo.dev/config": "file:../config",
+    "@rondo.dev/db": "file:../db",
+    "@rondo.dev/db-typeorm": "file:../db-typeorm",
+    "@rondo.dev/http-client": "file:../http-client",
+    "@rondo.dev/http-types": "file:../http-types",
+    "@rondo.dev/jsonrpc": "file:../jsonrpc",
+    "@rondo.dev/logger": "file:../logger",
+    "@rondo.dev/tasq": "file:../tasq",
+    "@rondo.dev/validator": "file:../validator",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cls-hooked": "^4.2.2",
