--- a/packages/captcha/package.json
+++ b/packages/captcha/package.json
@@ -9,14 +9,17 @@
     "clean": "rm -rf lib/"
   },
   "dependencies": {
+    "@rondo.dev/logger": "file:../logger",
     "express": "^4.17.1",
+    "http-errors": "^1.7.3",
     "svg-captcha": "^1.4.0"
   },
   "main": "lib/index.js",
   "module": "esm/index.js",
   "types": "lib/index.d.ts",
   "devDependencies": {
-    "@rondo.dev/test-utils": "0.0.1",
+    "@rondo.dev/test-utils": "file:../test-utils",
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "express-session": "^1.17.0",
     "supertest": "^4.0.2"
