--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,22 +13,23 @@
   "types": "lib/index.d.ts",
   "module": "esm/index.js",
   "dependencies": {
-    "@rondo.dev/common": "0.0.1",
-    "@rondo.dev/http-client": "0.0.1",
-    "@rondo.dev/http-types": "0.0.1",
-    "@rondo.dev/jsonrpc": "0.0.1",
-    "@rondo.dev/react-test": "0.0.1",
-    "@rondo.dev/redux": "0.0.1",
-    "bloomer": "^0.6.5",
+    "@rondo.dev/common": "file:../common",
+    "@rondo.dev/http-client": "file:../http-client",
+    "@rondo.dev/http-types": "file:../http-types",
+    "@rondo.dev/jsonrpc": "file:../jsonrpc",
+    "@rondo.dev/react-captcha": "file:../react-captcha",
+    "@rondo.dev/react-test": "file:../react-test",
+    "@rondo.dev/redux": "file:../redux",
     "history": "^4.10.1",
     "react-icons": "^3.8.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "styled-components": "^4.4.1",
     "timeago.js": "^4.0.1"
   },
   "devDependencies": {
-    "@rondo.dev/jsonrpc": "0.0.1",
-    "@rondo.dev/test-utils": "0.0.1",
+    "@rondo.dev/jsonrpc": "file:../jsonrpc",
+    "@rondo.dev/test-utils": "file:../test-utils",
     "react-dom": "^16.11.0"
   }
 }
