--- a/packages/http-client/package.json
+++ b/packages/http-client/package.json
@@ -9,13 +9,13 @@
     "clean": "rm -rf lib/"
   },
   "dependencies": {
-    "@rondo.dev/http-types": "0.0.1",
+    "@rondo.dev/http-types": "file:../http-types",
     "axios": "^0.19.0"
   },
   "main": "lib/index.js",
   "module": "esm/index.js",
   "types": "lib/index.d.ts",
   "devDependencies": {
-    "@rondo.dev/test-utils": "0.0.1"
+    "@rondo.dev/test-utils": "file:../test-utils"
   }
 }
