--- a/packages/jsonrpc/package.json
+++ b/packages/jsonrpc/package.json
@@ -9,8 +9,8 @@
     "clean": "rm -rf lib/"
   },
   "dependencies": {
-    "@rondo.dev/logger": "0.0.1",
-    "@rondo.dev/redux": "0.0.1",
+    "@rondo.dev/logger": "file:../logger",
+    "@rondo.dev/redux": "file:../redux",
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
