--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -13,7 +13,7 @@
     "rondo": "./lib/index.js"
   },
   "dependencies": {
-    "@rondo.dev/argparse": "0.0.1",
+    "@rondo.dev/argparse": "file:../argparse",
     "browser-unpack": "^1.4.2",
     "rimraf": "^3.0.0",
     "typescript": "^3.6.4"
