--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "lint": "eslint --ext .ts,.tsx,.ts .",
     "bootstrap": "ttsc --build packages/scripts && lerna exec rondo --stream -- build",
     "esm": "lerna exec rondo --stream -- build --esm",
-    "test:ci": "jest --roots '<rootDir>/lib' --testRegex '\\.test\\.js$'",
+    "test:ci": "jest --roots '<rootDir>/lib' --testRegex '\\.test\\.js$' --testTimeout 15000",
     "test": "jest"
   },
   "dependencies": {
