--- a/.drone.yml
+++ b/.drone.yml
@@ -10,10 +10,11 @@ steps:
       - npm install
       - npm run lint
       - npm run bootstrap
+      - npm run compile:lib
       - npm run test:ci
-      - npm run esm
+      - npm run compile:esm
 ---
 kind: signature
-hmac: 2a4dd894429afc6c3908a5d53cab57cac9a3918260a01e3f845db9aba53d6316
+hmac: 234de0a22115096452d098a0e6397fec9f39a6706b1a5e556387b0a6e432ee71
 
 ...
