--- a/packages/rondo-cli/template/package.json
+++ b/packages/rondo-cli/template/package.json
@@ -2,6 +2,7 @@
   "name": "@rondo.dev/package",
   "version": "0.0.1",
   "private": true,
+  "license": "UNLICENSED",
   "scripts": {
     "test": "jest",
     "lint": "tslint --project .",
