--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@rondo.dev/client",
+  "repository": "https://github.com/rondomoon/rondo-framework/tree/master/packages/client",
   "version": "0.0.1",
-  "private": true,
+  "license": "MIT",
   "peerDependencies": {
     "axios": "^0.19.0",
     "react": "^16.7.0",
