--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@rondo.dev/common",
+  "repository": "https://github.com/rondomoon/rondo-framework/tree/master/packages/common",
   "version": "0.0.1",
-  "private": true,
+  "license": "MIT",
   "main": "lib/index.js",
   "module": "esm/index.js",
   "types": "lib/index.d.ts",
