--- a/packages/image-upload/package.json
+++ b/packages/image-upload/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@rondo.dev/image-upload",
+  "repository": "https://github.com/rondomoon/rondo-framework/tree/master/packages/image-upload",
   "version": "0.0.1",
-  "private": true,
+  "license": "MIT",
   "peerDependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
