--- a/packages/redux/package.json
+++ b/packages/redux/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@rondo.dev/redux",
+  "repository": "https://github.com/rondomoon/rondo-framework/tree/master/packages/redux",
   "version": "0.0.1",
-  "private": true,
+  "license": "MIT",
   "scripts": {
     "test": "jest",
     "lint": "tslint --project .",
