--- a/packages/db-typeorm/package.json
+++ b/packages/db-typeorm/package.json
@@ -18,6 +18,5 @@
   },
   "main": "lib/index.js",
   "module": "esm/index.js",
-  "types": "lib/index.d.ts",
-  "devDependencies": {}
+  "types": "lib/index.d.ts"
 }
