--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -14,6 +14,5 @@
   },
   "main": "lib/index.js",
   "module": "esm/index.js",
-  "types": "lib/index.d.ts",
-  "devDependencies": {}
+  "types": "lib/index.d.ts"
 }
