--- a/packages/image-upload/package.json
+++ b/packages/image-upload/package.json
@@ -9,7 +9,5 @@
   },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "module": "esm/index.js",
-  "dependencies": {},
-  "devDependencies": {}
+  "module": "esm/index.js"
 }
