--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,4 +1,7 @@
 {
+  "publishConfig": {
+    "access": "public"
+  },
   "name": "@rondo.dev/logger",
   "repository": "https://github.com/rondomoon/rondo-framework/tree/master/packages/logger",
   "version": "0.0.2",
